fix reset of paging issue and general layout issues

--- a/src/app/components/Menu.css
+++ b/src/app/components/Menu.css
@@ -1,22 +1,21 @@
 .li-menu > ul {
-    list-style: none;
     margin: 8px;
     padding: 8px;
-    background: #f8f9fa;
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    /* width: 220px; */
 }
 
-li.menu > ul > li {
+.li-menu >ul > li {
+    width: 100%;
     cursor: pointer;
+    padding: 8px;
 }
 
-li.menu > ul > li > a:hover {
-    text-decoration: underline;
-    color: #333;
+.li-menu > ul > li > a:hover {
+    color: black;
 }
 
-li.menu > ul > li:hover {
-    background-color: #e2e6ea;
+.li-menu > ul > li:hover {
+    width: 100%;
+    background-color: lightgray;
 }
